Item4538: The table-layout:fixed; that was added totally blows up columnwidths in both IE6 and IE7. Any table without defined columnwidths gets all columns same width instead of autoadjusting to the contained text and worst - the text in cells get truncated. This you see the minute you view any table. My fix may not have been elegant but I tested it for two hours before I checked it in and I have verified 100s of tables and they all look fine. I also ran the unit tests. So please - if you make yet another improved fix - please test for several hours before checking it in. And please test in IE6 and IE7
git-svn-id: http://develop.twiki.org/svn/twiki/branches/MAIN@14694 a00a5322-12db-0310-a70b-8735589c885e

--- a/twikiplugins/PatternSkin/pub/TWiki/PatternSkin/style.css
+++ b/twikiplugins/PatternSkin/pub/TWiki/PatternSkin/style.css
@@ -257,16 +257,15 @@ a.twikiSubmit:visited:active {
 	border-width:1px;
 	margin:2px 0;
 	border-collapse:collapse;
-	table-layout:fixed;
 }
 .twikiTable td {
-	padding:.25em .5em;
+	padding:3px 6px;
 	border-width:1px;
 }
 .twikiTable th {
 	border-left-style:solid;
 	border-width:1px;
-	padding:.4em .5em;
+	padding:4px 6px;
 }
 .twikiTable th.twikiFirstCol {
 	border-left-style:none;
